# plexo-core

./: .gitmodules  Cargo.toml  Dockerfile  Makefile.toml  depot.json
src/: handlers.rs  lib.rs  main.rs
src/api/graphql/: auth.rs  commons.rs  mod.rs  schema.rs  tasks.rs
src/api/graphql/operations/: assets.rs  auth.rs  changes.rs  cognition.rs  labels.rs  members.rs  mod.rs  projects.rs  tasks.rs  teams.rs
src/api/graphql/processors/: ai.rs
src/api/graphql/queries/: tasks.rs
src/api/graphql/resources/: projects.rs  tasks.rs
src/api/openapi/: api.rs  auth.rs  commons.rs
src/auth/: auth.rs  commons.rs  engine.rs  handlers.rs  jwt.rs  mod.rs
src/core/: app.rs  config.rs  prelude.rs
src/emitters/: email.rs
src/errors/: app.rs
