[package]
name = "plexo-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plexo-sdk = "0.2.3"
tokio = { version = "1.34.0", features = ["full"] }
async-graphql = { version = "6.0.11", features = [
    "decimal",
    "chrono",
    "dataloader",
    "uuid",
] }
uuid = "1.6.1"
chrono = "0.4.31"
jsonwebtoken = "9.1.0"
serde = "1.0.192"
argon2 = "0.5.2"
oauth2 = "4.4.2"
reqwest = { version = "0.11.22", features = ["json"] }
poem = "1.3.59"
serde_json = "1.0.108"
thiserror = "1.0.50"
cookie = "0.18.0"
dotenv = "0.15.0"
