[package]
name = "plexo-core"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plexo-sdk = "0.2.11"
uuid = "1.7.0"
chrono = "0.4.33"
jsonwebtoken = "9.2.0"
serde = "1.0.196"
argon2 = "0.5.3"
oauth2 = "4.4.2"
serde_json = "1.0.113"
thiserror = "1.0.56"
cookie = "0.18.0"
dotenv = "0.15.0"
async-graphql-poem = "7.0.1"
lazy_static = "1.4.0"
tokio-stream = "0.1.14"
futures-util = "0.3.30"
tokio = { version = "1.35.1", features = ["full"] }
async-graphql = { version = "7.0.1", features = [
    "decimal",
    "chrono",
    "dataloader",
    "uuid",
] }
reqwest = { version = "0.11.23", features = ["json"] }
poem-openapi = { version = "4.0.0", features = [
    "swagger-ui",
    "chrono",
    "uuid",
] }
poem = { version = "2.0.0", features = ["cookie", "static-files"] }
