[package]
name = "plexo-core"
version = "0.1.19"
edition = "2021"

[dependencies]
plexo-sdk = "0.4.6"
uuid = "1.7.0"
chrono = "0.4.34"
jsonwebtoken = "9.2.0"
serde = "1.0.197"
argon2 = "0.5.3"
oauth2 = "4.4.2"
serde_json = "1.0.114"
thiserror = "1.0.57"
cookie = "0.18.0"
dotenv = "0.15.0"
async-graphql-poem = "7.0.2"
lazy_static = "1.4.0"
tokio-stream = "0.1.14"
futures-util = "0.3.30"
tokio = { version = "1.36.0", features = ["full"] }
async-graphql = { version = "7.0.2", features = [
    "decimal",
    "chrono",
    "dataloader",
    "uuid",
] }
reqwest = { version = "0.11.24", features = ["json"] }
poem-openapi = { version = "4.0.0", features = [
    "swagger-ui",
    "chrono",
    "uuid",
] }
poem = { version = "2.0.0", features = ["cookie", "static-files"] }


[dev-dependencies]
# plexo_sdk = { path = "../plexo-sdk" }
